--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
     suffix: .html
 
   datasource:
-    url: jdbc:mysql://localhost:3306/provasb_db?useSSL=false&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://localhost:3306/azienda?useSSL=false&allowPublicKeyRetrieval=true
     username: admin
     password: pass1
     driver-class-name: com.mysql.cj.jdbc.Driver
